--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body style="background-color: white;" id="body">
-    <button onclick="changecolor()">
-        Change Color
-    </button>
+<body style="display:flex;justify-content:center;padding-top:50vh" id="body">
+        <button onclick="changecolor()">
+            Change Color
+        </button>
 </body>
 <script>
     function changecolor(){
