--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body style="display:flex;justify-content:center;padding-top:50vh" id="body">
+<body id="body">
+    <div style="width: 100%/vw;height: 100vh;display: flex;justify-content: center;align-items: center;">
         <button onclick="changecolor()">
             Change Color
         </button>
+    </div>
 </body>
 <script>
     function changecolor(){
